--- a/documentation/classes/CreateProductCommandHandler.html
+++ b/documentation/classes/CreateProductCommandHandler.html
@@ -383,7 +383,7 @@ export class CreateProductCommandHandler
     const product &#x3D; this.productFactory.create({
       name: command.name,
       description: command.description,
-      changeLog: command.changeLog,
+      change_log: command.change_log,
       effective_from: command.effective_from,
       effective_to: command.effective_to,
       is_active: command.is_active,
