--- a/documentation/classes/CreateProductDto.html
+++ b/documentation/classes/CreateProductDto.html
@@ -140,7 +140,7 @@
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#changeLog" >changeLog</a>
+                                <a href="#change_log" >change_log</a>
                             </li>
                             <li>
                                 <a href="#description" >description</a>
@@ -181,10 +181,10 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="changeLog"></a>
+                    <a name="change_log"></a>
                     <span class="name">
-                        <span ><b>changeLog</b></span>
-                        <a href="#changeLog"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>change_log</b></span>
+                        <a href="#change_log"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -361,7 +361,7 @@ export class CreateProductDto {
   @ApiProperty()
   name: string;
   description: string;
-  changeLog: Record&lt;string, any&gt;;
+  change_log: Record&lt;string, any&gt;;
   effective_from: Date;
   effective_to: Date | null;
   is_active: boolean;
