--- a/documentation/classes/Product.html
+++ b/documentation/classes/Product.html
@@ -141,7 +141,7 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Public</span>
-                                <a href="#changeLog" >changeLog</a>
+                                <a href="#change_log" >change_log</a>
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
@@ -186,7 +186,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, name: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, description: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, changeLog: Record<string | any>, effective_from: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank">Date</a>, effective_to: Date | null, is_active: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank">boolean</a>)</code>
+<code>constructor(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, name: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, description: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, change_log: Record<string | any>, effective_from: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank">Date</a>, effective_to: Date | null, is_active: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank">boolean</a>)</code>
                     </td>
                 </tr>
                         <tr>
@@ -245,7 +245,7 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                        <td>changeLog</td>
+                                                        <td>change_log</td>
                                                   
                                                         <td>
                                                                     <code>Record&lt;string | any&gt;</code>
@@ -310,11 +310,11 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="changeLog"></a>
+                    <a name="change_log"></a>
                     <span class="name">
                             <span class="modifier">Public</span>
-                        <span ><b>changeLog</b></span>
-                        <a href="#changeLog"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>change_log</b></span>
+                        <a href="#change_log"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -508,17 +508,17 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export class Product {
-    constructor(
-      public id: string,
-      public name: string,
-      public description: string,
-      public changeLog: Record&lt;string, any&gt;,
-      public effective_from: Date,
-      public effective_to: Date | null,
-      public is_active: boolean,
-    ) {}
-  }
-  </code></pre>
+  constructor(
+    public id: string,
+    public name: string,
+    public description: string,
+    public change_log: Record&lt;string, any&gt;,
+    public effective_from: Date,
+    public effective_to: Date | null,
+    public is_active: boolean,
+  ) {}
+}
+</code></pre>
     </div>
 </div>
 
