--- a/documentation/classes/UpdateProductCommandHandler.html
+++ b/documentation/classes/UpdateProductCommandHandler.html
@@ -312,7 +312,7 @@ export class UpdateProductCommandHandler
       id,
       name,
       description,
-      changeLog,
+      change_log,
       effective_from,
       effective_to,
       is_active,
@@ -327,7 +327,7 @@ export class UpdateProductCommandHandler
     // Update the product properties
     productToUpdate.name &#x3D; name;
     productToUpdate.description &#x3D; description;
-    productToUpdate.changeLog &#x3D; changeLog;
+    productToUpdate.change_log &#x3D; change_log;
     productToUpdate.effective_from &#x3D; effective_from;
     productToUpdate.effective_to &#x3D; effective_to;
     productToUpdate.is_active &#x3D; is_active;
