--- a/documentation/classes/UpdateProductCommand.html
+++ b/documentation/classes/UpdateProductCommand.html
@@ -142,7 +142,7 @@
                             <li>
                                     <span class="modifier">Public</span>
                                     <span class="modifier">Readonly</span>
-                                <a href="#changeLog" >changeLog</a>
+                                <a href="#change_log" >change_log</a>
                             </li>
                             <li>
                                     <span class="modifier">Public</span>
@@ -193,7 +193,7 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, name: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, description: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, changeLog: Record<string | any>, effective_from: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank">Date</a>, effective_to: Date | null, is_active: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank">boolean</a>)</code>
+<code>constructor(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, name: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, description: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank">string</a>, change_log: Record<string | any>, effective_from: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank">Date</a>, effective_to: Date | null, is_active: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank">boolean</a>)</code>
                     </td>
                 </tr>
                         <tr>
@@ -252,7 +252,7 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                        <td>changeLog</td>
+                                                        <td>change_log</td>
                                                   
                                                         <td>
                                                                     <code>Record&lt;string | any&gt;</code>
@@ -317,12 +317,12 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="changeLog"></a>
+                    <a name="change_log"></a>
                     <span class="name">
                             <span class="modifier">Public</span>
                             <span class="modifier">Readonly</span>
-                        <span ><b>changeLog</b></span>
-                        <a href="#changeLog"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>change_log</b></span>
+                        <a href="#change_log"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -526,7 +526,7 @@
     public readonly id: string,
     public readonly name: string,
     public readonly description: string,
-    public readonly changeLog: Record&lt;string, any&gt;,
+    public readonly change_log: Record&lt;string, any&gt;,
     public readonly effective_from: Date,
     public readonly effective_to: Date | null,
     public readonly is_active: boolean,
