--- a/documentation/controllers/ProductsController.html
+++ b/documentation/controllers/ProductsController.html
@@ -201,8 +201,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="38"
-                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:38</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="37"
+                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:37</a></div>
                         </td>
                     </tr>
 
@@ -277,8 +277,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="33"
-                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:33</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="32"
+                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:32</a></div>
                         </td>
                     </tr>
 
@@ -323,8 +323,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="28"
-                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:28</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="27"
+                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:27</a></div>
                         </td>
                     </tr>
 
@@ -399,8 +399,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="70"
-                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:70</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="69"
+                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:69</a></div>
                         </td>
                     </tr>
 
@@ -476,8 +476,8 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="52"
-                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:52</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="51"
+                                    class="link-to-prism">src/modules/products/presentation/http/products.controller.ts:51</a></div>
                         </td>
                     </tr>
 
@@ -556,7 +556,6 @@ import { CreateProductDto } from &#x27;./dto/create-product.dto&#x27;;
 import { UpdateProductDto } from &#x27;./dto/update-product.dto&#x27;;
 import { LoggingInterceptor } from &#x27;src/shared/interceptors/logging/logging.interceptor&#x27;;
 
-
 @UseInterceptors(LoggingInterceptor)
 @Controller({
   path: &#x27;products&#x27;,
@@ -581,7 +580,7 @@ export class ProductsController {
       new CreateProductCommand(
         createProductDto.name,
         createProductDto.description,
-        createProductDto.changeLog,
+        createProductDto.change_log,
         createProductDto.effective_from,
         createProductDto.effective_to,
         createProductDto.is_active,
@@ -598,7 +597,7 @@ export class ProductsController {
       id,
       updateProductDto.name,
       updateProductDto.description,
-      updateProductDto.changeLog,
+      updateProductDto.change_log,
       updateProductDto.effective_from,
       updateProductDto.effective_to,
       updateProductDto.is_active,
