HIT-96:updated effective from and to to start and end date

--- a/documentation/classes/CreateProductCommandHandler.html
+++ b/documentation/classes/CreateProductCommandHandler.html
@@ -384,8 +384,8 @@ export class CreateProductCommandHandler
       name: command.name,
       description: command.description,
       change_log: command.change_log,
-      effective_from: command.effective_from,
-      effective_to: command.effective_to,
+      start_date: command.start_date,
+      end_date: command.end_date,
       is_active: command.is_active,
     });
 
