--- a/documentation/classes/CreateProductPricingCommandHandler.html
+++ b/documentation/classes/CreateProductPricingCommandHandler.html
@@ -388,8 +388,8 @@ export class CreateProductPricingCommandHandler
       price: command.price,
       currency: command.currency,
       is_active: command.is_active,
-      effective_from: command.effective_from,
-      effective_to: command.effective_to,
+      start_date: command.start_date,
+      end_date: command.end_date,
     });
 
     return this.productPricingRepository.save(productPricing);
