--- a/documentation/classes/UpdateProductDto.html
+++ b/documentation/classes/UpdateProductDto.html
@@ -147,11 +147,11 @@
                         <ul class="index-list">
                             <li>
                                     <span class="modifier">Optional</span>
-                                <a href="#effective_from" >effective_from</a>
+                                <a href="#start_date" >start_date</a>
                             </li>
                             <li>
                                     <span class="modifier">Optional</span>
-                                <a href="#effective_to" >effective_to</a>
+                                <a href="#end_date" >end_date</a>
                             </li>
                             <li>
                                     <span class="modifier">Optional</span>
@@ -180,11 +180,11 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="effective_from"></a>
+                    <a name="start_date"></a>
                     <span class="name">
                             <span class="modifier">Optional</span>
-                        <span ><b>effective_from</b></span>
-                        <a href="#effective_from"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>start_date</b></span>
+                        <a href="#start_date"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -207,11 +207,11 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="effective_to"></a>
+                    <a name="end_date"></a>
                     <span class="name">
                             <span class="modifier">Optional</span>
-                        <span ><b>effective_to</b></span>
-                        <a href="#effective_to"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>end_date</b></span>
+                        <a href="#end_date"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -274,8 +274,8 @@ import { CreateProductDto } from &#x27;./create-product.dto&#x27;;
 
 export class UpdateProductDto extends PartialType(CreateProductDto) {
   is_active?: boolean;
-  effective_from?: Date;
-  effective_to?: Date | null;
+  start_date?: Date;
+  end_date?: Date | null;
 }
 </code></pre>
     </div>
