--- a/documentation/classes/UpdateProductPricingDto.html
+++ b/documentation/classes/UpdateProductPricingDto.html
@@ -153,10 +153,10 @@
                             </li>
                             <li>
                                     <span class="modifier">Optional</span>
-                                <a href="#effective_from" >effective_from</a>
+                                <a href="#start_date" >start_date</a>
                             </li>
                             <li>
-                                <a href="#effective_to" >effective_to</a>
+                                <a href="#end_date" >end_date</a>
                             </li>
                             <li>
                                     <span class="modifier">Optional</span>
@@ -216,11 +216,11 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="effective_from"></a>
+                    <a name="start_date"></a>
                     <span class="name">
                             <span class="modifier">Optional</span>
-                        <span ><b>effective_from</b></span>
-                        <a href="#effective_from"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>start_date</b></span>
+                        <a href="#start_date"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -243,10 +243,10 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="effective_to"></a>
+                    <a name="end_date"></a>
                     <span class="name">
-                        <span ><b>effective_to</b></span>
-                        <a href="#effective_to"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>end_date</b></span>
+                        <a href="#end_date"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -340,8 +340,8 @@ export class UpdateProductPricingDto extends PartialType(
   price?: number;
   currency?: string;
   is_active?: boolean;
-  effective_from?: Date;
-  effective_to: Date | null;
+  start_date?: Date;
+  end_date: Date | null;
 }
 </code></pre>
     </div>
