--- a/documentation/entities/ProductEntity.html
+++ b/documentation/entities/ProductEntity.html
@@ -145,11 +145,11 @@
                             </li>
                             <li>
                                     <span class="modifier"></span>
-                                <a href="#effective_from" >effective_from</a>
+                                <a href="#start_date" >start_date</a>
                             </li>
                             <li>
                                     <span class="modifier"></span>
-                                <a href="#effective_to" >effective_to</a>
+                                <a href="#end_date" >end_date</a>
                             </li>
                             <li>
                                     <span class="modifier"></span>
@@ -297,11 +297,11 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="effective_from"></a>
+                    <a name="start_date"></a>
                     <span class="name">
                             <span class="modifier"></span>
-                        <span ><b>effective_from</b></span>
-                        <a href="#effective_from"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>start_date</b></span>
+                        <a href="#start_date"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -333,11 +333,11 @@
         <tbody>
             <tr>
                 <td class="col-md-4">
-                    <a name="effective_to"></a>
+                    <a name="end_date"></a>
                     <span class="name">
                             <span class="modifier"></span>
-                        <span ><b>effective_to</b></span>
-                        <a href="#effective_to"><span class="icon ion-ios-link"></span></a>
+                        <span ><b>end_date</b></span>
+                        <a href="#end_date"><span class="icon ion-ios-link"></span></a>
                     </span>
                 </td>
             </tr>
@@ -540,10 +540,10 @@ export class ProductEntity {
   is_active: boolean;
 
   @Column({ type: &#x27;date&#x27;, nullable: false })
-  effective_from: Date;
+  start_date: Date;
 
   @Column({ type: &#x27;date&#x27;, nullable: true })
-  effective_to: Date;
+  end_date: Date;
 
   @CreateDateColumn({ type: &#x27;timestamp&#x27; })
   created_at: Date;
